# infrastructure/entry-points/reactive-web/src/main/java/co/com/pragma/api/LoanApiRouter.java
@@ -6,8 +6,7 @@ import lombok.extern.log4j.Log4j2;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
-import static org.springframework.web.reactive.function.server.RequestPredicates.GET;
-import static org.springframework.web.reactive.function.server.RequestPredicates.POST;
+import static org.springframework.web.reactive.function.server.RequestPredicates.*;
 import static org.springframework.web.reactive.function.server.RouterFunctions.route;
 
 import org.springframework.web.reactive.function.server.RouterFunction;
@@ -23,7 +22,9 @@ public class LoanApiRouter {
 
     @Bean
     public RouterFunction<ServerResponse> routerFunction() {
+        String loansWithId = loanPath.getLoans() + "/{id}";
         return route(POST(loanPath.getLoans()), loanApiHandler::listenRegister)
-                .andRoute(GET(loanPath.getLoans()), loanApiHandler::listenFindAllByStatus);
+                .andRoute(GET(loanPath.getLoans()), loanApiHandler::listenFindAllByStatus)
+                .andRoute(PUT(loansWithId), loanApiHandler::listenUpdateStatus);
     }
 }
