# infrastructure/entry-points/reactive-web/src/main/java/co/com/pragma/api/request/UpdateLoanStatusRequest.java
@@ -1,0 +1,12 @@
+package co.com.pragma.api.request;
+
+import co.com.pragma.model.state.State;
+import jakarta.validation.constraints.NotNull;
+import lombok.Data;
+
+@Data
+public class UpdateLoanStatusRequest {
+
+    @NotNull(message = "El nuevo estado no puede ser nulo.")
+    private State state;
+}
